--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -2,4 +2,16 @@
 
 .App {
   text-align: center;
+  font-family: 'Oxygen', sans-serif;
+}
+
+.card-with-height {
+  height: 245px;
+  overflow: auto;
+}
+.search-on-a-tab {
+  color: rgba(0, 0, 0, 0.65);
+  position: absolute;
+  right: -40vw;
+  margin-top: -8px;
 }
