figured out profile update API

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -27,4 +27,5 @@
   color:rgba(0, 0, 0, 0.65) !important;
   background-color: white !important;
   border: 0px !important;
+  cursor: pointer !important;
 }
