--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -28,6 +28,16 @@
   margin: 0 0.5em;
 }
 
+/* overwrite <List.Item> style */
+.profile-list {
+    list-style: inside !important;
+    list-style-type: disc !important;
+    padding: 0px !important;
+    display: list-item !important;
+    border-bottom: 0px !important;
+}
+
+
 #root {
     overflow: auto;
 }
