--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -17,10 +17,11 @@
   float: right;
   border: 0px !important;
 }
-.clear-disabled {
+.clear-disabled
+.clear-disabled[disabled] {
   color:rgba(0, 0, 0, 0.65) !important;
   background-color: white !important;
-  border: 0px !important;
+  border: 1px !important;
   cursor: text !important;
 }
 
@@ -39,7 +40,19 @@
 
 input.ant-input {
     border: 0px !important;
+
+    /* border-top: 0px !important;
+    border-right: 0px !important;
+    border-left: 0px !important;
+    border-radius: 0px !important; */
 }
+.ant-select-disabled {
+    background: white !important;
+}
+.margin10px {
+    margin: 10px !important;
+}
+
 #root {
     overflow: auto;
 }
