--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -6,15 +6,12 @@
   margin-top: -8px;
 }
 
-/* input.ant-input.clear-disabled {
-  cursor: text !important;
-} */
 
 .profile-tabs {
   margin: 0 0.5em;
 }
 
-.marginTop10px {
+.margin-top-10px {
     margin-top: 10px !important;
 }
 
@@ -46,6 +43,7 @@ label::after {
 .ant-form-item-control-wrapper > 
 .ant-form-item-control {
     width: 100% !important;
+    cursor: pointer;
 }
  
 .profile-input-form > 
@@ -55,29 +53,28 @@ label::after {
 .ant-select-selection
 {
     background: white !important;
+    cursor: pointer;
 }
 
 .clear-disabled >
 .ant-select-auto-complete.ant-select >
 .ant-input-disabled {
     color: rgba(0,0,0,.65) !important;
-}
-
-.clear-disabled
-.ant-select-selection {
-    background: white !important;
-    color: rgba(0,0,0,.65) !important;
+    cursor: pointer;
 }
 
 .clear-disabled.ant-select-disabled {
     color: rgba(0,0,0,.65) !important;
+    cursor: pointer;
 }
 
 .clear-disabled >
 .ant-input-disabled {
     color: rgba(0,0,0,.65) !important;
+    cursor: pointer;
 }
 .clear-disabled.ant-select-auto-complete.ant-select 
 .ant-input-disabled {
     color: rgba(0,0,0,.65) !important;
+    cursor: pointer;
 }
