--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,11 +1,10 @@
 
-.search-on-a-tab {
-  color: rgba(0, 0, 0, 0.65);
-  position: absolute;
-  right: -76vw;
-  margin-top: -8px;
-}
 
+.fake-tab {
+    position: absolute;
+    right: 22px;
+    width: 385px;
+}
 .card-with-height
 .ant-card-body{
     height: 200px;
@@ -40,6 +39,11 @@ label::after {
     justify-content: space-between;
     align-items: center;
 } */
+
+
+.ant-select-show-arrow.clear-disabled.ant-select.ant-select-enabled {
+    width: 100%;
+}
 
 /* this forces Organization AutoComplete input field to 100% in 
  AfflicationForm */
