--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -14,9 +14,6 @@
     overflow: auto;
 }
 
-.profile-tabs {
-    margin: 0 0.5em;
-}
 
 .ant-tabs-nav-wrap .ant-tabs-nav-scroll .ant-tabs-nav {
     width: 100% !important;
@@ -30,9 +27,6 @@
     margin-bottom: 24px !important;
 }
 
-#root {
-    overflow: auto;
-}
 
 /* this is to get rid of : after form item label */
 .profile-input-form>.ant-form-item-label>label::after {
@@ -125,3 +119,29 @@
 }
 
 .PrettyList li {}
+
+html {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    /* height: 100%;
+display: flex;
+flex-direction: column; */
+}
+
+#root {
+    flex: 1 1 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+
+
+.Col {
+    flex: 1 1 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
