--- a/react-app/src/components/Profile/Profile.css
+++ b/react-app/src/components/Profile/Profile.css
@@ -4,3 +4,23 @@
     flex-direction: column;
     min-height: 0;
 }
+
+.ProfileAvatar {
+    flex: 1 1 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center
+}
+
+.ProfileAvatar-Realname {
+    font-weight: bold;
+}
+
+.ProfileAvatar-Username {
+    font-weight: bold;
+    font-family: monospace;
+}
+
+.ProfileAvatar-Avatar {
+    
+}
