--- a/vite-app/src/components/Profile/Profile.css
+++ b/vite-app/src/components/Profile/Profile.css
@@ -102,3 +102,16 @@
 .Profile-field-force-inline .ant-form-item>.ant-row>.ant-col.ant-form-item-label {
     margin-right: 0.25rem;
 }
+
+.Profile-section {}
+
+.Profile-section-title {
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.3);
+}
+
+.Profile-section-body {}
+
+.Profile-section+.Profile-section {
+    margin-top: 1rem;
+}
