--- a/vite-app/src/components/Profile/Profile.css
+++ b/vite-app/src/components/Profile/Profile.css
@@ -64,12 +64,20 @@
     margin-left: 10px;
 }
 
+.AffiliationsCol:nth-child(1) {
+    flex: 1.5 0 0;
+}
+
+.AffiliationsCol:nth-child(2) {
+    flex: 2 0 0;
+}
+
 .AffiliationsCol:nth-child(3) {
-    flex: 0 0 6.5rem;
+    flex: 0 0 4rem;
 }
 
 .AffiliationsCol:nth-child(4) {
-    flex: 0 0 6.5rem;
+    flex: 0 0 4rem;
 }
 
 .AffiliationsCol:nth-child(5) {
